--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
 
     <!-- Dashboard -->
     <div id="dashboard" class="hidden">
+		<script type="text/javascript">
+	atOptions = {
+		'key' : 'c950542326db4d69e6d90c2873e60c70',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c950542326db4d69e6d90c2873e60c70/invoke.js"></script>
         <!-- Header -->
         <nav class="glass-effect shadow-lg border-b border-gray-700">
             <div class="max-w-7xl mx-auto px-4">
